[package]
name = "huawei-http-api"
version = "0.1.0"
authors = ["Salik Sadruddin Merani <salik.merani@gmail.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.14.1"
reqwest = "0.9.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.40"
quick-xml = {version = "0.16.1", features = ["failure"]}
failure = "0.1.5"
sha-1 = "0.8"
sha2 = "0.8"
hex = "0.4"
base64 = "0.10"
chrono = "0.4"
serde-xml-rs = "0.3"